# testing

./: CHANGES.md  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: assignment_5.tex  assignment_5_pres.tex  task_paper.py
src/assignment_5/: __init__.py
src/assignment_5/analysis/: task_analysis.py
src/assignment_5/data_management/: __init__.py  task_data_management.py
src/assignment_5/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
