[metadata]
name = assignment_5
description = Assignment 5
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timmens/assignment_5
author = Tim M
author_email = mensingertim@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/timmens/assignment_5
    Documentation = https://github.com/timmens/assignment_5
    Github = https://github.com/timmens/assignment_5
    Tracker = https://github.com/timmens/assignment_5/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/assignment_5/_version.py
